// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ce-subscription-details renders 1`] = `
<ce-subscription-details>
  <mock:shadow-root>
    <div class="subscription-details">
      <ce-text style="--font-weight: var(--sc-font-weight-bold);"></ce-text>
      <div>
        <ce-format-number type="currency"></ce-format-number>
      </div>
      <div>
        <ce-subscription-status-badge></ce-subscription-status-badge>
      </div>
    </div>
  </mock:shadow-root>
</ce-subscription-details>
`;

exports[`sc-subscription-details renders 1`] = `
<sc-subscription-details>
  <mock:shadow-root>
    <div class="subscription-details">
      <sc-text style="--font-weight: var(--sc-font-weight-bold);"></sc-text>
      <div>
        <sc-format-number type="currency"></sc-format-number>
      </div>
      <div>
        <sc-subscription-status-badge></sc-subscription-status-badge>
      </div>
    </div>
  </mock:shadow-root>
</sc-subscription-details>
`;
